--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="container">
       <div class="text-center my-5">
-        <h1>MON BLOG</h1>
+        <h1>Le Dev</h1>
         <hr />
       </div>
 
