--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="row"></div>
     </div>
 
-    <div class="container">
+    <div class="container bg-info">
       <div class="text-center my-5">
         <h1>Le Dev</h1>
         <hr />
